--- a/src/pages/Survey/Survey.scss
+++ b/src/pages/Survey/Survey.scss
@@ -12,9 +12,13 @@
     display: flex;
     align-items: center;
     margin: 30px 0 20px 0;
-    .ProgressBarCount {
+    .surveyCurrentNumber {
       margin-left: 30px;
       font-weight: 700;
+    }
+    .surveyTotalNumber {
+      font-weight: 700;
+      color: gray;
     }
   }
   .surveyNumber {
@@ -34,7 +38,7 @@
     justify-content: space-between;
     align-items: center;
     position: fixed;
-    bottom: 150px;
+    bottom: 160px;
     margin: 0 25px 0 25px;
   }
 }
