--- a/src/components/ProgressBar.scss
+++ b/src/components/ProgressBar.scss
@@ -9,13 +9,13 @@
   .progressSquareOn {
     width: 15px;
     height: 20px;
-    background-color: #2389ff;
+    background-color: #b61bd1;
   }
   .progressLineOn {
     display: inline-block;
     width: 100%;
     border: none;
-    border-top: 5px solid #2389ff;
+    border-top: 5px solid #b61bd1;
   }
   .progressLineOff {
     display: inline-block;
