--- a/src/pages/Survey/Survey.scss
+++ b/src/pages/Survey/Survey.scss
@@ -3,6 +3,7 @@
   align-items: center;
   flex-direction: column;
   margin: 0 25px 0 25px;
+  width: 300px;
   .surveyTitle {
     margin-top: 30px;
     font-size: 20px;
@@ -38,7 +39,7 @@
     justify-content: space-between;
     align-items: center;
     position: fixed;
-    bottom: 160px;
+    bottom: 100px;
     margin: 0 25px 0 25px;
   }
 }
