--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -23,8 +23,9 @@
       margin-top: 30px;
       font-weight: 500;
       .surveyNameText {
-        font-size: 20px;
-        font-weight: 600;
+        font-size: 17px;
+        font-weight: 800;
+        color: #9a039a;
       }
       .noneName {
         font-size: 18px;
@@ -40,11 +41,13 @@
       font-weight: 500;
       .surveyTitleText {
         font-size: 17px;
-        font-weight: 600;
+        font-weight: 800;
+        color: #9a039a;
       }
       .questionsNum {
         font-size: 20px;
-        font-weight: 600;
+        font-weight: 700;
+        color: #9a039a;
       }
       .noneSurvey {
         font-size: 18px;
